fix: fix header animation on safari

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -49,6 +49,7 @@
         position: absolute;
         margin: 3rem 0;
         text-align: center;
+        transform-origin: left;
         animation: moveLogoToCenter 0.3s ease forwards;
 
         svg {
@@ -183,15 +184,13 @@
     left: 2.4rem;
     height: 5rem;
     width: 12rem;
-    transform: none;
   }
 
   100% {
     height: 15rem;
     width: 100%;
     top: 8rem;
-    left: 50%;
-    transform: translate(-50%);
+    left: 0;
   }
 }
 
@@ -229,7 +228,6 @@
     height: 8rem;
   }
 }
-
 
 @keyframes fixMenuOnTopL {
   0% {
